--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,8 @@
     "elif number_50 < 50:\n",
     "    # if number_50 is greater than 50, assign the `less_than_50` variable to the number 50\n",
     "else:\n",
-    "    # else assign the `less_than_50` variable to 49"
+    "    # else assign the `less_than_50` variable to 49\n",
+    "    number"
    ]
   },
   {
