Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,8 @@
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "if tempature >"
+    "if tempature > 80:\n",
+    "    "
    ]
   },
   {
