--- a/index.ipynb
+++ b/index.ipynb
@@ -75,7 +75,7 @@
     "temperature = 85\n",
     "is_it_hot = None\n",
     "if tempature > 80:\n",
-    "    is_it_hot = "
+    "    is_it_hot = \"It is so hot out!\""
    ]
   },
   {
