--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,8 @@
     "is_it_hot = None\n",
     "if tempature > 80:\n",
     "    is_it_hot = \"It is so hot out!\"\n",
-    "else tempature <"
+    "else tempature <= 80:\n",
+    "    "
    ]
   },
   {
