--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
     "if tempature > 80:\n",
     "    is_it_hot = \"It is so hot out!\"\n",
     "else tempature <= 80:\n",
-    "    "
+    "    is_it_hot - "
    ]
   },
   {
