--- a/index.ipynb
+++ b/index.ipynb
@@ -68,16 +68,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-60328465dbeb>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-60328465dbeb>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    else tempature <= 80:\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
     "if tempature > 80:\n",
     "    is_it_hot = \"It is so hot out!\"\n",
     "else tempature <= 80:\n",
-    "    is_it_hot - "
+    "    is_it_hot = \"This is nothing! Bring on the heat.\""
    ]
   },
   {
