Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -68,24 +68,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-60328465dbeb>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-3-39b82d0ee6ef>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-60328465dbeb>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    else tempature <= 80:\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-39b82d0ee6ef>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    else temperature <= 80:\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "if tempature > 80:\n",
+    "if temperature > 80:\n",
     "    is_it_hot = \"It is so hot out!\"\n",
-    "else tempature <= 80:\n",
+    "else temperature <= 80:\n",
     "    is_it_hot = \"This is nothing! Bring on the heat.\""
    ]
   },
