--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,8 @@
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "if today_is > 6"
+    "if today_is > 6:\n",
+    "    "
    ]
   },
   {
