--- a/index.ipynb
+++ b/index.ipynb
@@ -97,7 +97,7 @@
     "today_is = 4\n",
     "day_of_the_week = None\n",
     "if today_is > 6:\n",
-    "    "
+    "    day_of_the_week = ''"
    ]
   },
   {
