--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "if today_is > 6:\n",
+    "if today_is :\n",
     "    day_of_the_week = ''\n",
     "elif today_is >"
    ]
