--- a/index.ipynb
+++ b/index.ipynb
@@ -96,9 +96,9 @@
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "if today_is :\n",
+    "if today_is > 6:\n",
     "    day_of_the_week = ''\n",
-    "elif today_is >"
+    "elif today_is >5"
    ]
   },
   {
