--- a/index.ipynb
+++ b/index.ipynb
@@ -98,7 +98,9 @@
     "day_of_the_week = None\n",
     "if today_is > 6:\n",
     "    day_of_the_week = ''\n",
-    "elif today_is > 5"
+    "elif today_is > 5:\n",
+    "    day_of_the_week = ''\n",
+    "    "
    ]
   },
   {
