--- a/index.ipynb
+++ b/index.ipynb
@@ -100,7 +100,14 @@
     "    day_of_the_week = ''\n",
     "elif today_is > 5:\n",
     "    day_of_the_week = ''\n",
-    "    "
+    "elif today_is > 4:\n",
+    "    day_of_the_week = ''\n",
+    "elif today_is > 5:\n",
+    "    day_of_the_week = ''\n",
+    "elif today_is > 5:\n",
+    "    day_of_the_week = ''\n",
+    "elif today_is > 5:\n",
+    "    day_of_the_week = ''"
    ]
   },
   {
