--- a/index.ipynb
+++ b/index.ipynb
@@ -97,7 +97,7 @@
     "today_is = 4\n",
     "day_of_the_week = None\n",
     "if today_is > 6:\n",
-    "    day_of_the_week = ''\n",
+    "    day_of_the_week = 'Saturday'\n",
     "elif today_is > 5:\n",
     "    day_of_the_week = ''\n",
     "elif today_is > 4:\n",
@@ -107,7 +107,7 @@
     "elif today_is > 2:\n",
     "    day_of_the_week = ''\n",
     "elif today_is > 1:\n",
-    "    day_of_the_week = ''"
+    "    day_of_the_week = 'Sunday'"
    ]
   },
   {
