--- a/index.ipynb
+++ b/index.ipynb
@@ -99,11 +99,11 @@
     "if today_is > 6:\n",
     "    day_of_the_week = 'Saturday'\n",
     "elif today_is > 5:\n",
-    "    day_of_the_week = ''\n",
+    "    day_of_the_week = 'Friday'\n",
     "elif today_is > 4:\n",
-    "    day_of_the_week = ''\n",
+    "    day_of_the_week = 'Thursday'\n",
     "elif today_is > 3:\n",
-    "    day_of_the_week = ''\n",
+    "    day_of_the_week = 'Wednes'\n",
     "elif today_is > 2:\n",
     "    day_of_the_week = ''\n",
     "elif today_is > 1:\n",
