--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,9 @@
     "elif today_is > 3:\n",
     "    day_of_the_week = 'Tuesday'\n",
     "elif today_is > 2:\n",
-    "    day_of_the_week = 'Mon'"
+    "    day_of_the_week = 'Monday'\n",
+    "elif today_is > 2:\n",
+    "    day_of_the_week = 'Monday'"
    ]
   },
   {
