Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,8 +108,8 @@
     "    day_of_the_week = 'Tuesday'\n",
     "elif today_is > 2:\n",
     "    day_of_the_week = 'Monday'\n",
-    "elif today_is > 2:\n",
-    "    day_of_the_week = 'Monday'"
+    "else:\n",
+    "    day_of_the_week = 'Sunday'"
    ]
   },
   {
