Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,8 @@
     "elif today_is > 2:\n",
     "    day_of_the_week = 'Monday'\n",
     "else:\n",
-    "    day_of_the_week = 'Sunday'"
+    "    day_of_the_week = 'Sunday'\n",
+    "    \n"
    ]
   },
   {
