--- a/index.ipynb
+++ b/index.ipynb
@@ -109,8 +109,7 @@
     "elif today_is > 2:\n",
     "    day_of_the_week = 'Monday'\n",
     "else:\n",
-    "    day_of_the_week = 'Sunday'\n",
-    "    \n"
+    "    day_of_the_week = 'Sunday'"
    ]
   },
   {
