--- a/index.ipynb
+++ b/index.ipynb
@@ -105,9 +105,9 @@
     "    day_of_the_week = 'Thursday'\n",
     "elif today_is >= 4:\n",
     "    day_of_the_week = 'Wednesday'\n",
-    "elif today_is >= 3:\n",
+    "elif today_is = 3:\n",
     "    day_of_the_week = 'Tuesday'\n",
-    "elif today_is >=2:\n",
+    "elif today_is =2:\n",
     "    day_of_the_week = 'Monday'\n",
     "else:\n",
     "    day_of_the_week = 'Sunday'"
