--- a/index.ipynb
+++ b/index.ipynb
@@ -97,13 +97,13 @@
     "today_is = 4\n",
     "day_of_the_week = None\n",
     "\n",
-    "if today_is >= 7:\n",
+    "if today_is = 7:\n",
     "    day_of_the_week = 'Saturday'\n",
-    "elif today_is >= 6:\n",
+    "elif today_is = 6:\n",
     "    day_of_the_week = 'Friday'\n",
-    "elif today_is >= 5:\n",
+    "elif today_is = 5:\n",
     "    day_of_the_week = 'Thursday'\n",
-    "elif today_is >= 4:\n",
+    "elif today_is = 4:\n",
     "    day_of_the_week = 'Wednesday'\n",
     "elif today_is = 3:\n",
     "    day_of_the_week = 'Tuesday'\n",
