--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
     "    day_of_the_week = 'Tuesday'\n",
     "elif today_is =2:\n",
     "    day_of_the_week = 'Monday'\n",
-    "else:\n",
+    "elif today_is\n",
     "    day_of_the_week = 'Sunday'"
    ]
   },
