Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,8 +109,9 @@
     "    day_of_the_week = 'Tuesday'\n",
     "elif today_is =2:\n",
     "    day_of_the_week = 'Monday'\n",
-    "elif today_is\n",
-    "    day_of_the_week = 'Sunday'"
+    "elif today_is = 1\n",
+    "    day_of_the_week = 'Sunday'\n",
+    "eles\"\""
    ]
   },
   {
