Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,9 @@
     "elif today_is = 1\n",
     "    day_of_the_week = 'Sunday'\n",
     "else:\n",
-    "    print(di)"
+    "    print(\"Not a day\")\n",
+    "    \n",
+    "    "
    ]
   },
   {
