Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,9 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-6565deeb7c77>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-6565deeb7c77>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if today_is = 7:\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
@@ -114,7 +123,7 @@
     "else:\n",
     "    print(\"Not a day\")\n",
     "    \n",
-    "    "
+    "today_is"
    ]
   },
   {
