--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
     "today_is = 4\n",
     "day_of_the_week = None\n",
     "\n",
-    "if today_is = 7:\n",
+    "if today_is >= 7:\n",
     "    day_of_the_week = 'Saturday'\n",
     "elif today_is = 6:\n",
     "    day_of_the_week = 'Friday'\n",
