--- a/index.ipynb
+++ b/index.ipynb
@@ -90,15 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-6565deeb7c77>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-9-a256c291de8f>, line 16)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-6565deeb7c77>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if today_is = 7:\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-a256c291de8f>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    elif today_is >= 1\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -108,17 +108,17 @@
     "\n",
     "if today_is >= 7:\n",
     "    day_of_the_week = 'Saturday'\n",
-    "elif today_is = 6:\n",
+    "elif today_is >= 6:\n",
     "    day_of_the_week = 'Friday'\n",
-    "elif today_is = 5:\n",
+    "elif today_is >= 5:\n",
     "    day_of_the_week = 'Thursday'\n",
-    "elif today_is = 4:\n",
+    "elif today_is >= 4:\n",
     "    day_of_the_week = 'Wednesday'\n",
-    "elif today_is = 3:\n",
+    "elif today_is >= 3:\n",
     "    day_of_the_week = 'Tuesday'\n",
-    "elif today_is =2:\n",
+    "elif today_is >=2:\n",
     "    day_of_the_week = 'Monday'\n",
-    "elif today_is = 1\n",
+    "elif today_is >= 1\n",
     "    day_of_the_week = 'Sunday'\n",
     "else:\n",
     "    print(\"Not a day\")\n",
