--- a/index.ipynb
+++ b/index.ipynb
@@ -90,16 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-a256c291de8f>, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-a256c291de8f>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    elif today_is >= 1\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -118,7 +120,7 @@
     "    day_of_the_week = 'Tuesday'\n",
     "elif today_is >=2:\n",
     "    day_of_the_week = 'Monday'\n",
-    "elif today_is >= 1\n",
+    "elif today_is >= 1:\n",
     "    day_of_the_week = 'Sunday'\n",
     "else:\n",
     "    print(\"Not a day\")\n",
