Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,16 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "'Wednesday'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,8 @@
     "    day_of_the_week = 'Sunday'\n",
     "else:\n",
     "    print(\"Not a day\")\n",
-    "    \n"
+    "\n",
+    "day_of_the_week  \n"
    ]
   },
   {
