--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
     "today_is = 7\n",
     "day_of_the_week = None\n",
     "\n",
-    "if today_i\n",
+    "if today_is = >= 8:\n",
     "elif today_is >= 7:\n",
     "    day_of_the_week = 'Saturday'\n",
     "elif today_is >= 6:\n",
