--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
     "day_of_the_week = None\n",
     "\n",
     "if today_is = >= 8:\n",
-    "    day_of_th_\n",
+    "    day_of_the_week = 'Pleas '\n",
     "elif today_is >= 7:\n",
     "    day_of_the_week = 'Saturday'\n",
     "elif today_is >= 6:\n",
