--- a/index.ipynb
+++ b/index.ipynb
@@ -105,11 +105,11 @@
     }
    ],
    "source": [
-    "today_is = 7\n",
+    "today_is = 8\n",
     "day_of_the_week = None\n",
     "\n",
     "if today_is = >= 8:\n",
-    "    day_of_the_week = 'Pleas '\n",
+    "    day_of_the_week = 'Not a day'\n",
     "elif today_is >= 7:\n",
     "    day_of_the_week = 'Saturday'\n",
     "elif today_is >= 6:\n",
