Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -99,16 +99,16 @@
        "'Saturday'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "today_is = 8\n",
+    "today_is = 7\n",
     "day_of_the_week = None\n",
     "\n",
-    "if today_is = >= 8:\n",
+    "if today_is >= 8:\n",
     "    day_of_the_week = 'Not a day'\n",
     "elif today_is >= 7:\n",
     "    day_of_the_week = 'Saturday'\n",
