--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,7 @@
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
-    "ends_with = None\n",
+    "ends_with = string.\n",
     "# c"
    ]
   },
