--- a/index.ipynb
+++ b/index.ipynb
@@ -139,13 +139,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
-    "ends_with = string.\n",
+    "ends_with = string.endswith(sub_string)\n",
     "# c"
    ]
   },
