Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -145,8 +145,7 @@
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
-    "ends_with = string.endswith(sub_string)\n",
-    "# c"
+    "ends_with = string.endswith(sub_string)"
    ]
   },
   {
