--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,8 @@
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
-    "ends_with = string.endswith(sub_string)"
+    "ends_with = None\n",
+    "if string string.endswith(sub_string)"
    ]
   },
   {
