--- a/index.ipynb
+++ b/index.ipynb
@@ -146,7 +146,8 @@
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
-    "if string string.endswith(sub_string)"
+    "if string.endswith(sub_string):\n",
+    "    "
    ]
   },
   {
