--- a/index.ipynb
+++ b/index.ipynb
@@ -147,7 +147,7 @@
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "if string.endswith(sub_string):\n",
-    "    "
+    "    print(sub_string)\n"
    ]
   },
   {
