Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,9 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "on\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
@@ -149,7 +157,7 @@
     "if string.endswith(sub_string):\n",
     "    print(sub_string)\n",
     "else:\n",
-    "    "
+    "    false"
    ]
   },
   {
